--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="button-group">
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
-      <button onclick="alert('الفيلم يحكي عن رجل يواجه كوابيسه الحقيقية...')">🔥 عن الفيلم</button>
+      <button onclick="alert('الفيلم يحكي عن رجل يواجه الجن و كوابيس حقيقية...')">🔥 عن الفيلم</button>
       <button onclick="alert('شكرا على تقييمك ودعمك ')">⭐ قيّم الفيلم</button>
       <button onclick="window.open('https://x.com/intent/tweet?text=شاهدوا+فيلم+العاشرة+المرعب!+https://asemalmoshr3.github.io/THETENTH/')">🔁 شارك على X</button>
       <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/')">📘 شارك على فيسبوك</button>
