--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
     <div class="button-group">
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
       <button onclick="alert('الفيلم يحكي عن رجل يواجه كوابيسه الحقيقية...')">🔥 عن الفيلم</button>
-      <button onclick="alert('شكرا لتقييمك ودعمك')">⭐ قيّم الفيلم</button>
+      <button onclick="alert('شكرا لدعمك وتقييمك')">⭐ قيّم الفيلم</button>
       <button onclick="window.open('https://x.com/intent/tweet?text=شاهدوا+فيلم+العاشرة+المرعب!+https://asemalmoshr3.github.io/THETENTH/')">🔁 شارك على X</button>
       <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/')">📘 شارك على فيسبوك</button>
       <button onclick="window.open('https://instagram.com/asem.almoshrea')">📸 تابع المخرج</button>
     </div>
 
-    <!-- عداد زيارات -->
+    <!-- عداد زيارات باللون الأحمر -->
     <div style="margin-top: 30px;">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0036&nbdigits=5&type=page&initCount=0" title="عدد الزوار" alt="Web Counter" border="0" />
-      <p style="font-size: 12px; color: #ccc;">عدد الزيارات</p>
+      <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" title="عدد الزوار" alt="Web Counter" border="0" />
+      <p style="font-size: 12px; color: #ff4444;">عدد الزيارات</p>
     </div>
 
     <div style="margin-top: 15px;">
