--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
       <button onclick="window.open('https://instagram.com/asem.almoshrea')">📸 تابع المخرج</button>
     </div>
 
-    <!-- عداد زيارات باللون الأحمر -->
-    <div style="margin-top: 30px;">
-      <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" title="عدد الزوار" alt="Web Counter" border="0" />
-      <p style="font-size: 12px; color: #ff4444;">عدد الزيارات</p>
-    </div>
+  <!-- عداد زيارات فعلي شغال -->
+<div style="margin-top: 30px;">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=12586694&style=0006&nbdigits=5&type=ip&initCount=0" title="عدد الزوار" alt="Web Counter" border="0" />
+  <p style="font-size: 12px; color: #ff4444;">عدد الزيارات</p>
+</div>
+
 
     <div style="margin-top: 15px;">
       <input type="checkbox" id="disclaimerCheck" onclick="showDisclaimer()" checked>
